--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{% static 'assets/css/templatemo-space-dynamic.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/animated.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/owl.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
 <!--
     
 TemplateMo 562 Space Dynamic
