--- a/templates/competitors.html
+++ b/templates/competitors.html
@@ -46,11 +46,11 @@
                                         
                                     </div>
                                     <div class="sc-title">
-                                        <span>STW206CDE</span>
+                                        <span>Compitetor</span>
                                         <h3>{{i.name}}</h3>
                                     </div>
                                     <div class="sc-button">
-                                        <a href="/mycourses/STW206CDE" class="btns">Click here for more data</a>
+                                        <a href="{% url 'competitors_detail' i.name %}" class="btns">Click here for more data</a>
                                     </div>
                                 </div>
                             </div>
