--- a/templates/competitors.html
+++ b/templates/competitors.html
@@ -7,7 +7,7 @@
             
                     <div class="container course-tab">
                         <div class="page-title">
-                            <h2 class="abc" style="text-align: center;">Competitors</h2>
+                           <div class="table" style="text-align: center;width: 980px; left: 471px;" ><h2> Competitors </h2></div>
                         </div>
                         <div class="row course-list">
                             {% for i in competitors %}
@@ -19,8 +19,8 @@
                                         
                                     </div>
                                     <div class="sc-title">
-                                        <span>Compitetor</span>
-                                        <h3>{{i.name}}</h3>
+                                        <h6 style="text-align: center;">Competitor {{i.id}}</h6>
+                                        <h3 style="text-align: center;">{{i.name}}</h3>
                                     </div>
                                     <div class="sc-button">
                                         <a href="{% url 'competitors_detail' i.name %}" class="btns">Click here for more data</a>
